--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -333,11 +333,11 @@ At the core, we use a very simple conceptual model for constraints, using a smal
 \emph{complex constraints}, i.e., the set of constraints which are created out of \emph{simple} and/or other \emph{complex constraints}. This structure therefore allows to build complex constraints out of other (simple or complex) constraints. Regarding our database of constraint types, 60\% of the constraint types are simple constraints and 26\% are complex constraints. 
 Constraints of additional 14\% of the constraint types are \emph{complex constraints} as well which can be simplified and therefore formulated as \emph{simple constraints} if additional constraining elements are introduced to cover them.
 
-The properties describing a simple constrained are very structural. The central property is the \emph{constraining element} which refers to one of 103 contraining elements described in our technical report \cite{BoschNolleAcarEckert2015}. Constraining elements are for example taken from Description Logics, another concrete example would be 'regex' where a regular expression is checked against some property value. In most cases, constraining elements directly correspond to a constraint type, sometimes (as for regex) they are shared by several constraint types. Complex constraints again need several constraing elements to be expressed.
+The properties describing a simple constrained are very structural. The central property is the \emph{constraining element} which refers to one of 103 contraining elements described in our technical report \cite{BoschNolleAcarEckert2015}. Constraining elements are for example taken from Description Logics, another concrete example would be 'REGEX' where a regular expression is checked against some property value. In most cases, constraining elements directly correspond to a constraint type, sometimes (as for REGEX) they are shared by several constraint types. Complex constraints again need several constraing elements to be expressed.
 
 Irrespective of and additonal to the constraining element, there are properties to describe the actual constraint, they can also be seen as parameters for the constraining element. The \emph{context class} limits the constraint to individuals of a specific class. Depending on the constraining elements, a list of \emph{classes} can be provided, for example to determine the valid classes for a value or to define a class intersection to be used in a constraint. \emph{leftProperties} and \emph{rightProperties} are lists usually containing properties the constraint is applied to. A typical example for a constraint with a right hand side list of properties would be R43, literal value comparision, where constraints like birthDate $<$ deathDate can be expressed.
 
-Finally, the \emph{constrainig value} contains a literal value to be checked against; for instance in the case of the 'regex' element, it contains the regular expression to be evaluated.
+Finally, the \emph{constrainig value} contains a literal value to be checked against; for instance in the case of the 'REGEX' element, it contains the regular expression to be evaluated.
 
 This simple structure plus the constraining elements form the building blocks of our proposed framework. In the technical report \cite{BoschNolleAcarEckert2015}, we list for every constraint type its representation in our framework which not only shows that constraints of any constraint type can indeed be described generically in this way, but which also forms the starting point for any mappings using this framework.
 
@@ -382,15 +382,12 @@ Table \ref{tab:property-constraint-cardinality-restriction} displays how the sim
 
 The \emph{constraining element} is an intuitive term which indicates the actual type of constraint. For the majority of the constraint types, there is exactly one constraining element. Complex constraints need several constraining elements to be expressed. For the constraint type \emph{property domain (R-25, R-26)} whose constraints restrict domains of properties, e.g., there is only one constraining element with exactly the same identifier \emph{property domain}. For some constraint types, however, one constraining element is not sufficient to describe all possible constraints of a particular constraint type and therefore multiple constraining elements may be stated. The constraint type \emph{language tag cardinality (R-48, R-49)}, for instance, is used to restrict data properties to have a minimum, maximum, or exact number of relationships to literals with selected language tags. Thus, three constraining elements are needed to express each possible constraint of that constraint type.
 
-If constraint types are expressible in DL, associated constraining elements are formally based on DL constructs like concept and role constructors ($\sqsubseteq$, $\equiv$, $\sqcap$, $\sqcup$, $\neg$, $\exists$, $\forall$, $\geq$, $\leq$), equality (=), and inequality ($\ne$). In case constraint types cannot be expressed in DL such as \emph{data property facets (R-46)} or \emph{literal pattern matching (R-44)}, we reuse widely known terms from SPARQL (e.g., \emph{regex}) or XML Schema (e.g., \emph{minInclusive}) as constraining elements. For some constraint types like \emph{minimum qualified cardinality restrictions (R-75)}, it is more intuitive and concise to directly apply DL constructs like the \emph{at-least restriction} ($\geq$) as constraining elements. We provide a complete list of all constraining elements which can be used to express constraints of any constraint type \cite{BoschNolleAcarEckert2015}. 
+If constraint types are expressible in DL, associated constraining elements are formally based on DL constructs like concept and role constructors ($\sqsubseteq$, $\equiv$, $\sqcap$, $\sqcup$, $\neg$, $\exists$, $\forall$, $\geq$, $\leq$), equality (=), and inequality ($\ne$). In case constraint types cannot be expressed in DL such as \emph{data property facets (R-46)} or \emph{literal pattern matching (R-44)}, we reuse widely known terms from SPARQL (e.g., REGEX) or XML Schema constraining facets (e.g., \emph{xsd:minInclusive}) as constraining elements. For some constraint types like \emph{minimum qualified cardinality restrictions (R-75)}, it is more intuitive and concise to directly apply DL constructs like the \emph{at-least restriction} ($\geq$) as constraining elements. We provide a complete list of all 103 constraining elements which can be used to express constraints of any constraint type \cite{BoschNolleAcarEckert2015}. 
 
-In some cases, a constraint is only complete when a \emph{constraining value} is stated in addition to the constraining element
-and simple constraints may refer to a list of \emph{classes}. The constraining element of the property constraint {\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person},} e.g., is \emph{$\geq$}, the constraining value is \emph{1}, and the list of classes includes the class \emph{Person} which restricts the objects of the property \emph{author} to be persons.
+Additional to the constraining element, there are properties of simple constraints which can be seen as parameters for the constraining element. In some cases, a simple constraint is only complete when a \emph{constraining value} is stated in conjunction with the constraining element. Depending on the constraining element, a list of \emph{classes} can be provided, for example to determine the valid classes for a value. The constraining element of the constraint {\small\ms{Publication $\sqsubseteq$ $\geq$1 author.Person},} e.g., is \emph{$\geq$}, the constraining value is \emph{1}, and the list of classes includes the class \emph{Person} which restricts the objects of the property \emph{author} to be persons.
 
-For property constraints, \emph{left} and \emph{right property lists} are specified.
-The assignment of properties to these lists happens relative to the constraining element.
-\emph{Object Property Paths} (\emph{R-55})
-ensure that if an individual \emph{x} is connected by a sequence of object properties with an individual \emph{y}, 
+\emph{Left} and \emph{right property lists} are lists usually containing properties the constraint is applied to. A typical example for a constraint with a right hand side list of properties would be a constraint of the type \emph{literal value comparison (R-43)} to express that birth dates must be before death dates ({\small\ms{birthDate $<$ deathDate}}). The assignment of properties to these lists happens relative to the constraining element.
+\emph{Object property paths} (\emph{R-55}) ensure that if an individual \emph{x} is connected by a sequence of object properties with an individual \emph{y}, 
 then \emph{x} is also related to \emph{y} by a particular object property. 
 As \emph{Stephen-Hawking} is the author of the book \emph{A-Brief-History-Of-Time} 
 %{\small\ms{(authorOf(Stephen-Hawking, A-Brief-History-Of-Time))}} 
@@ -398,8 +395,8 @@ whose genre is \emph{Popular-Science},
 %{\small\ms{(genre(A-Brief-History-Of-Time, Popular-Science)),}}
 the object property path {\small\ms{authorOf $\circ$ genre $\sqsubseteq$ authorOfGenre}} infers that \emph{Stephen-Hawking} is an author of the genre \emph{Popular-Science}. 
 %{\small\ms{(authorOfGenre(Stephen-Hawking, Popular-Science))}.}
-Thus, when representing the property constraint using the RDF-CV (see Table \ref{tab:property-constraint-object-property-paths}), the properties \emph{authorOf} and \emph{genre} are placed on the left side of the constraining element \emph{property paths}
-and the property \emph{authorOfGenre} on its right side. As this property constraint holds for all individuals within the data, the context class is set to the \emph{DL top concept} $\top$ which stands for the super-class of all possible classes.
+Thus, when representing the constraint using the RDF-CV (see Table \ref{tab:property-constraint-object-property-paths}), the properties \emph{authorOf} and \emph{genre} are placed on the left side of the constraining element \emph{property path}
+and the property \emph{authorOfGenre} on its right side. The \emph{context class} limits the constraint to individuals of a specific class. As the \emph{property path} constraint holds for all individuals within the data, the context class is set to the \emph{DL top concept} $\top$ which stands for the super-class of all possible classes.
 \begin{table}[H]
   \scriptsize
   \sffamily
@@ -455,11 +452,11 @@ The first OWL 2 axiom explicitly declares {\em ISBN} to be a datatype. %\er{Why 
 The second OWL 2 axiom defines {\em ISBN} as an abbreviation for a datatype restriction on \emph{xsd:string}. 
 The datatype {\em ISBN} can be used just like any other datatype like in the universal quantification above.
 
-Table \ref{tab:simple-constraint-not-expressible-in-dl)} presents (1) in the first line how the literal pattern matching simple constraint which is not expressible in DL and (2) in the second line how the universal quantification complex constraint which is expressible in DL are represented using the RDF-CV. Thereby, the context class \emph{ISBN}, whose instances must satisfy the simple constraint, is reused within the list of classes the complex constraint refers to. The literal pattern matching constraint type introduces the constraining element \emph{regex} whose validation has to be implemented once like for any other constraining element.
+Table \ref{tab:simple-constraint-not-expressible-in-dl)} presents (1) in the first line how the literal pattern matching simple constraint which is not expressible in DL and (2) in the second line how the universal quantification complex constraint which is expressible in DL are represented using the RDF-CV. Thereby, the context class \emph{ISBN}, whose instances must satisfy the simple constraint, is reused within the list of classes the complex constraint refers to. The literal pattern matching constraint type introduces the constraining element \emph{REGEX} whose validation has to be implemented once like for any other constraining element.
 %In general, validation has to be implemented once for each \emph{generic constraint type} which is not expressible in DL. 
 %\begin{gcotable}
 %property & Enterprise & registryNumber & - & RegistryNumber & $\forall$ & - \\
-%class & RegistryNumber & - & - & xsd:string & regex & 'NCC-1701([-][A-E])?' \\
+%class & RegistryNumber & - & - & xsd:string & REGEX & 'NCC-1701([-][A-E])?' \\
 %\end{gcotable}
 \begin{table}[H]
   \scriptsize
