--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -248,7 +248,7 @@ In this paper, we build on the experience gained from mapping several constraint
 
 
 \section{Motivation}
-
+\label{sec:motivation}
 Even with an upcoming W3C recommendation, it can be expected that several constraint languages will be used in practice in future -- consider the situation in the XML world, where a standardized schema language was available from the beginning and yet additional ways to formulate and check constraints have been created. Therefore, 
 semantically equivalent \emph{specific constraints} represented in different languages will exist.
 This raises two questions: 
@@ -856,7 +856,7 @@ $\top$ & authorOf & - & - & irreflexive property & - \\
 
 \subsection{Mapping implementation}
 
-Constraint of the type \emph{minimum qualified cardinality restriction (R-75)} expressed in OWL 2:
+If a language developer would like to use the framework for the implementation of a constraint language, the process is straight-forward. For a language construct, the corresponding constraint type has to be identified. Again we use the \emph{minimum qualified cardinality restriction (R-75)} type which is supported in OWL 2:
 
 \begin{ex}[commandchars=\\\{\}]
 Publication 
@@ -866,7 +866,8 @@ Publication
     owl:onClass Person .
 \end{ex}
 
-The same constraint expressed generically using the RDF-CV:
+From Table~\ref{tab:property-constraint-cardinality-restriction}, we know the representation in our framework, which corresponds to the following 
+RDF representation using RDF-CV:
 
 \begin{ex}[commandchars=\\\{\}]
 [   a rdfcv:SimpleConstraint ;
@@ -877,7 +878,7 @@ The same constraint expressed generically using the RDF-CV:
     rdfcv:constrainingValue 1 ] .
 \end{ex}
 
-SPIN inference rule to infer the generic constraint out of the constraint expressed by OWL 2:
+The mapping simply constructs this representation out of the OWL2 representation using a SPARQL CONSTRUCT query: 
 
 \begin{ex}
 owl:Thing 
@@ -904,11 +905,14 @@ owl:Thing
                 owl:onClass ?c1 . } """ ; ] .
 \end{ex}
 
-The property \emph{spin:rule} can be used to link an rdfs:Class with SPARQL CONSTRUCT queries. Each query defines an inference rule that is applied to all instances of the associated class and its subclasses. The inference rule defines how additional triples can be inferred from what is stated in the WHERE clause. For each binding of the pattern in the WHERE clause of the rule, the triple templates from the CONSTRUCT clause are instantiated and added as inferred triples to the underlying model. At query execution time, the SPARQL variable ?this is bound to the current instance of the class. As each resource per default is assigned to the class owl:Thing, this inference rule is evaluated for each subject of the input RDF graph.
+SPIN is used to execute the mapping, the property \emph{spin:rule} links an rdfs:Class with SPARQL CONSTRUCT queries. Each query defines an inference rule that is applied to all instances of the associated class and its subclasses. The inference rule defines how additional triples can be inferred from what is stated in the WHERE clause. For each binding of the pattern in the WHERE clause of the rule, the triple templates from the CONSTRUCT clause are instantiated and added as inferred triples to the underlying model. At query execution time, the SPARQL variable ?this is bound to the current instance of the class. As each resource per default is assigned to the class owl:Thing, this inference rule is evaluated for each subject of the input RDF graph.
 
-SPIN inference rule to infer the OWL 2 constraint out of the generically expressed constraint:
+The framework is implemented in exactly the same way by providing another mapping to create the actual SPIN/SPARQL query that validates the constraints and produces constraint violation messages if a constraint is violated, as described in our previous paper about the DSP implementation \cite{BoschEckert2014-2}.\footnote{At the time of this writing, not all mappings for the constraint types are implemented, but of course the implementations can be complemented and adapted to own requirements, as needed. The most recent implementation can be found here: \url{https://github.com/boschthomas/rdf-validation/blob/master/SPIN/RDF-CV-2-SPIN.ttl}.}
 
-\subsection{XXX}
+\subsection{Constraint transformation}
+
+As stated in Section~\ref{sec:motivation}, we see a huge potential in the possibility to transform semantically equivalent constraints from one high level constraint language to another via the RDF-CV representation, to avoid that every possible combination of constraint languages has to be mapped separately. The following SPIN inference rule exemplifies this approach and provides a mapping from RDF-CV back to an OWL2 constraint:
+
 
 \begin{ex}
 owl:Thing 
@@ -935,6 +939,8 @@ owl:Thing
                 rdf:rest rdf:nil . } """ ; ] .
 \end{ex}
 
+It can be seen that the mapping is quite similar to the first mapping and basically simply switches the CONSTRUCT and WHERE part of the query, with slight adjustment in the structure of the variables. Potentially an even simpler representation for the mapping could be found that would enable the creation of forward and backward mappings out of it. We didn't investigate this further, though, and it is not yet clear if there can be cases where the backward mapping is more different.
+
 \section{Related Work}
 
 In this section, we present current languages for RDF constraint formulation and RDF data validation. SPIN, SPARQL, OWL 2, ShEx, ReSh, and DSP are the six most promising and mostly used constraint languages. In addition, the W3C Data Shapes Working Group currently develops SHACL, an RDF vocabulary for describing RDF graph structures.
@@ -949,7 +955,7 @@ and uses SPARQL to specify logical constraints and inference rules \cite{Fuerber
 
 \emph{Shape Expressions (ShEx)} \cite{W3C-ShEx-Primer-2014,W3C-ShEx-Definition-2014,Prud'hommeaux-2014,Boneva-2014} specifies a language whose syntax and semantics are similar to regular expressions. ShEx associate RDF graphs with labeled patterns called \emph{shapes} which are used to express formal constraints on the content of RDF graphs. \emph{Resource Shapes (ReSh)} \cite{W3C-ReSh-2014} defines its own vocabulary for specifying shapes of RDF resources. Ryman, Hors, and Speicher define \emph{shape} as a description of the set of triples a resource is expected to contain and as a description of the integrity constraints those triples are required to satisfy \cite{Ryman2013}. 
 
-The \emph{Dublin Core Application Profile (DCAP)} and \emph{Bibframe} are approaches to specify \emph{profiles} for application-specific purposes. The term \emph{profile} is widely used to refer to a document that describes how standards or specifications are deployed to support the requirements of a particular application, function, community, or context. In the metadata community, the term \emph{application profile} has been applied to describe the tailoring of standards for specific applications. A \emph{Dublin Core Application Profile (DCAP)} \cite{DCMI-DCAP-2009} defines metadata records which meet specific application needs while providing semantic interoperability with other applications on the basis of globally defined vocabularies and models. The \emph{Singapore Framework for Dublin Core Application Profiles} \cite{DCMI-Singapore-2008} is a framework for designing metadata and for defining DCAPs. The framework comprises descriptive components that are necessary or useful for documenting DCAPs.
+The \emph{Dublin Core Application Profile (DCAP)} and \emph{Bibframe Profiles} are approaches to specify \emph{profiles} for application-specific purposes. The term \emph{profile} is widely used to refer to a document that describes how standards or specifications are deployed to support the requirements of a particular application, function, community, or context. In the metadata community, the term \emph{application profile} has been applied to describe the tailoring of standards for specific applications. A \emph{Dublin Core Application Profile (DCAP)} \cite{DCMI-DCAP-2009} defines metadata records which meet specific application needs while providing semantic interoperability with other applications on the basis of globally defined vocabularies and models. The \emph{Singapore Framework for Dublin Core Application Profiles} \cite{DCMI-Singapore-2008} is a framework for designing metadata and for defining DCAPs. The framework comprises descriptive components that are necessary or useful for documenting DCAPs.
 
 The \emph{DCMI Abstract Model} \cite{DCMI-Abstract-Model-2007} is required for formalizing a notion of machine-processable application profiles. It specifies an abstract model for Dublin Core metadata which is independent of any particular encoding syntax. Its primary purpose is to specify the components used in Dublin Core metadata. Nilsson et al. \cite{DCMI-DC-RDF-2008} depict how the constructs of the DCMI Abstract Model are represented using the abstract syntax of the RDF model. A \emph{Description Set Profile (DSP)} \cite{DCMI-DSP-2008} is a generic constraint language which is used to formally specify structural constraints on sets of resource descriptions within an application profile. DSP constrains resources that may be described by descriptions in a description set, the properties that may be used, and the values properties may point to. \emph{BIBFRAME}\footnote{\url{http://bibframe.org}} \cite{Kroeger-2013,Godby-2015,Miller-2012} is the result of the \emph{Bibliographic Framework Initiative} and defines a vocabulary \cite{DCMI-Bibframe-Authorities-2014,DCMI-Bibframe-Relationships-2014} which has a strong overlap with DSP. \emph{BIBFRAME Profiles} \cite{DCMI-Bibframe-Profiles-2014} are essentially identical to DCAPs.
 
