--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -165,7 +165,7 @@ RDF validation; RDF constraints; RDF constraint types, RDF validation requiremen
 %For this reason, we cannot use OWL 2 ontologies for RDF validation as we use XML Schemas, DTDs, RELAX NG, or Schematron to validate XML documents.
 
 The proper validation of RDF data according to constraints is a common requirement of data practitioners. 
-Among the reasons for the success of XML is the possibility to formulate fine-grained constraints to be met by the data and to validate the data according to these constraints using powerful systems like \emph{DTD}, \emph{XML Schema}, \emph{RELAX NG}, or \emph{Schematron}.
+Among the reasons for the success of XML is the possibility to formulate fine-grained constraints to be met by the data and to validate the data according to these constraints using powerful systems like DTD, XML Schema, RELAX NG, or Schematron.
 
 In 2013, the \emph{W3C} organized the \emph{RDF Validation Workshop}\footnote{\url{http://www.w3.org/2012/12/rdf-val/}}
 where experts from industry, government, and academia discussed first RDF validation use cases. 
@@ -186,7 +186,7 @@ The power of SPIN is shown in
 Table \ref{tab:constraint-type-specific-expressivity}, where we list the fraction (and absolute numbers in brackets) of how many constraint types each of these languages supports \cite{BoschNolleAcarEckert2015}. 
 We further see that OWL 2 is currently the most expressive high-level constraint language, at least according to the pure number of constraint types supported. This does not preclude that other constraint languages are better suited for certain applications, either because they support some types that are not supported by OWL or because the constraint representation is more appealing to the data practitioners -- producers as well as consumers who again might have different needs and preferences.
 
-\begin{table}
+\begin{table}[H]
 	\centering
 	  %\caption{Constraint Type Specific Expressivity}
 		\caption{Constraint Type Specific Expressivity of Constraint Languages}
