--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -178,7 +178,7 @@ Based on our work in the DCMI and in cooperation with the W3C working group,
 we identified by today 81 constraint types, where each type corresponds to a specific requirement in the database. In a technical report, we explain each constraint type in detail and give examples for each represented by different constraint languages \cite{BoschNolleAcarEckert2015}.
 
 Various constraint languages exist or are being developed that support more or less of these constraint types. For our work, we focus on the following four as the ones that are most popular among data practitioners, often mentioned on mailing lists and/or being candidates or prototypes for the upcoming W3C recommendation:
-\emph{Description Set Profiles (DSP)}\footnote{\url{ http://dublincore.org/documents/2008/03/31/dc-dsp/}}, \emph{Resource Shapes (ReSh)}, \emph{Shape Expressions (ShEx)}\footnote{\url{http://www.w3.org/Submission/2014/SUBM-shex-primer-20140602/}}, and the \emph{Web Ontology Language} \emph{(OWL)}. Despite the fact that OWL is arguably not a constraint language, it is widely used in practice as such under the closed-world and unique name assumptions.
+\emph{Description Set Profiles (DSP)}\footnote{\url{ http://dublincore.org/documents/2008/03/31/dc-dsp/}}, \emph{Resource Shapes (ReSh)}\footnote{\url{http://www.w3.org/Submission/2014/SUBM-shapes-20140211/}}, \emph{Shape Expressions (ShEx)}\footnote{\url{http://www.w3.org/Submission/2014/SUBM-shex-primer-20140602/}}, and the \emph{Web Ontology Language} \emph{(OWL)}. Despite the fact that OWL is arguably not a constraint language, it is widely used in practice as such under the closed-world and unique name assumptions.
 
 With its direct support of validation via SPARQL, the \emph{SPARQL Inferencing Notation (SPIN)}\footnote{\url{http://spinrdf.org/}} is also very popular to formulate and check constraints \cite{Fuerber2010}. We consider SPIN as a low-level language in contrast to the other constraint languages where specific language constructs exist to define constraints in a declarative and in comparison more intuitive way -- although SPARQL aficionados might object particularly to the latter point.
 
