--- a/paper/paper 2/dc-2015.tex
+++ b/paper/paper 2/dc-2015.tex
@@ -113,56 +113,23 @@ In the context of the DCMI RDF Application Profile task group and the W3C Data S
 To support the work, a comprehensive, community-driven database has been created where case studies, use cases, requirements and solutions are collected. Based on this database,
 we published by today 81 types of constraints that are required by various stakeholders for data applications. We generally use this collection of constraint types to gain a better understanding of the expressiveness of existing solutions and gaps that still need to be filled. 
 Regarding the implementation of constraint languages, we already proposed to use high-level languages to describe the constraints, but map them to SPARQL queries in order to execute the actual validation; we demonstrated this approach for Description Set Profiles.
-In this paper, we generalize from the experience of implementing Description Set Profiles by introducing an abstraction layer that is able to describe any constraint type in a way that is more or less straight-forwardly transformable to SPARQL queries. 
-It provides a basic terminology and classification system for RDF constraints to foster discussions on RDF validation.
-We demonstrate that using another layer on top of SPARQL helps to implement validation consistently accross constraint languages and simplifies the actual implementation of new languages.
+In this paper, we generalize from the experience of implementing DSP by introducing an abstraction layer that is able to describe any constraint type in a way that mappings from high-level constraint languages to this intermediate representation can be created more or less straight-forwardly. 
+We demonstrate that using another layer on top of SPARQL helps to implement validation consistently accross constraint languages, simplifies the actual implementation of new languages and supports the transformation of semantically equivalent constraints across constraint languages.
 
-%When using the developed vocabulary to intermediately represent constraints,
-%depending on the individual type of constraint one or multiple particular constraining elements are applied.
-%We base these constraining elements on formal logic.
-%As constraints of 2/3 of all constraint types are expressible by logical constructs from description logics,
-%we may use logical constructs as constraining elements.
-%In order to be able to support all constraint types, however,
-%we determined for each constraint type more intuitive constraining elements in natural language like \emph{conditional properties}, \emph{allowed values}, and \emph{language tag minimum cardinality}.
-%A title is required for books.
-%This constraint of the constraint type \emph{required properties (R-68)} can be either expressed by the existential quantifier $\exists$ from description logics or more intuitively using the constraining element \emph{required properties}.
-
-%As SPARQL is generally seen as the method of choice to validate data according to certain constraints and
-%as RDF data can be validated on constraints of any constraint type by means of SPARQL,
-%we use SPIN, a SPARQL-based way to validate RDF data, as implementation language 
-%to actually execute the validation of RDF data.
-%Thereby, constraints may either be 
-%(1) expressed by domain specific constraint languages like OWL 2 and DSP or
-%(2) represented by the proposed vocabulary. 
-
-%The majority of these constraint types can be expressed in description logics which provides their logical underpinning.
-%In this paper, we provide a basic terminology and classification system for RDF constraints.\tb{The contributions of this paper are the following. (1)...}
-%We developed a vocabulary to describe constraints of any RDF constraint type generically. 
-%%(whether expressible in description logics or not).
-%We show how to transform constraints, expressed by any constraint language \ms{$\alpha$}, into generically expressed constraints and into constraints represented by any other constraint language \ms{$\beta$} and discuss why these transformations are useful.
-%We explain how to overcome the necessity to implement the validation of each constraint type for multiple constraint languages by providing mappings to generically expressed constraints.
-
-%The main contributions of this paper are:
-%(1) We provide a basic terminology and classification system for RDF constraints to lay the ground for discussions on RDF validation.
-%(2) As current high-level constraint languages do not support all constraint types, 
-%we developed a vocabulary to describe constraints of any constraint type in a generic way and specified its underlying semantics.
-%(3) We show how to enhance the interoperability of constraints expressed by different languages by using the proposed vocabulary 
-%to intermediately represent constraints 
-%%as an intermediate generic representation 
-%which enables transformations between semantically equivalent constraints.
-%(4) We explain how constraint languages may reuse validation implementations which are provided once for each constraint type.
+%%%%% ORIGINAL, AS SUBMITTED
+% In the context of the DCMI RDF Application Profile task group and the W3C Data Shapes Working Group solutions for the proper formulation of constraints and validation of RDF data on these constraints are developed. Several approaches and constraint languages exist but there is no clear favorite and none of the languages is able to meet all requirements raised by data practitioners.
+% To support the work, a comprehensive, community-driven database has been created where case studies, use cases, requirements and solutions are collected. Based on this database,
+% we published by today 81 types of constraints that are required by various stakeholders for data applications. We generally use this collection of constraint types to gain a better understanding of the expressiveness of existing solutions and gaps that still need to be filled. 
+% Regarding the implementation of constraint languages, we already proposed to use high-level languages to describe the constraints, but map them to SPARQL queries in order to execute the actual validation; we demonstrated this approach for Description Set Profiles.
+% In this paper, we generalize from the experience of implementing Description Set Profiles by introducing an abstraction layer that is able to describe any constraint type in a way that is more or less straight-forwardly transformable to SPARQL queries. 
+% It provides a basic terminology and classification system for RDF constraints to foster discussions on RDF validation.
+% We demonstrate that using another layer on top of SPARQL helps to implement validation consistently accross constraint languages and simplifies the actual implementation of new languages.
 
 \hspace{-1.4em}
 \textbf{Keywords:}
 RDF validation; RDF constraints; RDF constraint types, RDF validation requirements; Linked Data; Semantic Web
 
 \section{Introduction}
-%The purpose of OWL 2 ontologies is to perform reasoning on RDF data and not to validate RDF data conforming to these ontologies.
-%OWL 2 is based on the {\em non-unique name assumption} (nUNA) whereas RDF validation requires that different names represent different objects ({\em unique name assumption} (UNA)). 
-%Reasoning in OWL 2 is based on the semantics of {\em open-world assumption} (OWA), i.e., a statement cannot be inferred to be false if it cannot be proved to be true  which fits its primary design purpose: to represent knowledge on the World Wide Web. 
-%On the other hand, many RDF validation scenarios require the {\em closed-world assumption} (CWA) (i.e., a statement is inferred to be false if it cannot be proved to be true).
-%This ambiguity in semantics is one of the main reasons why OWL 2 has not been adopted as a standard constraint language for RDF validation.  
-%For this reason, we cannot use OWL 2 ontologies for RDF validation as we use XML Schemas, DTDs, RELAX NG, or Schematron to validate XML documents.
 
 The proper validation of RDF data according to constraints is a common requirement of data practitioners. 
 Among the reasons for the success of XML is the possibility to formulate fine-grained constraints to be met by the data and to validate the data according to these constraints using powerful systems like DTD, XML Schema, RELAX NG, or Schematron.
